<resources>
    <string name="app_name">通話録音</string>
    <string name="text_defaultString">デフォルト</string>
    <!--録音リスト-->
    <string name="title_recordList">&lt;通話録音リスト&gt;</string>
    <string name="menu_setting">設定</string>
    <string name="menu_endApp">アプリ終了</string>
    <string name="menu_recording">録音有効無効</string>
    <string name="menu_file_del">ファイル削除</string>
    <string name="menu_cancel_fileDel">中止</string>
    <string name="menu_use_address_book">名前で表示</string>
    <string name="menu_not_use_address_book">ファイル名で表示</string>
    <string name="image_description">設定</string>
    <string name="no_items_found">No items found</string>

    <!--設定項目-->
    <string name="file_format">録音するファイル形式</string>
    <string name="auto_start">自動起動</string>
    <string name="bluetooth">ブルートゥース</string>
    <string name="auto_start_explain">アプリ起動で録音を有効にする場合ＯＮ</string>
    <string name="bluetooth_explain">Bluetoothを使用する場合ＯＮ</string>

    <!--音声再生ダイアログ-->
    <string name="seekbar_volume">ボリューム</string>
    <string name="seekbar_position">進行状況</string>
    <string name="seekbar_remainTime">残り再生時間</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_end_without_save">保存せずに戻る</string>
</resources>
