<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_activate"
        android:title="@string/menu_recording"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SwitchCompat"/>
    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings_white_24dp"/>
    <item
        android:id="@+id/menu_file_delete"
        android:title="@string/menu_file_del"
        android:orderInCategory="300"
        android:icon="@drawable/ic_delete_black_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_cancel"
        android:title="@string/menu_cancel_fileDel"
        android:orderInCategory="400"
        android:icon="@drawable/ic_cancel_black_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>