<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize_small"
        android:text="@string/seekbar_volume"/>
    <SeekBar
        android:id="@+id/seekBar_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:progress="50"
        android:max="100"
        app:layout_constraintTop_toBottomOf="@id/text_volume" />

    <TextView
        android:id="@+id/text_play_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/seekBar_volume"
        android:textSize="@dimen/textSize_small"
        android:text="@string/seekbar_position"/>
    <SeekBar
        android:id="@+id/seekBar_play_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:progress="25"
        android:max="100"
        app:layout_constraintTop_toBottomOf="@id/text_play_position" />
    <TextView
        android:id="@+id/text_progress_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textSize_small"
        android:text="@string/seekbar_remainTime"
        app:layout_constraintTop_toBottomOf="@id/seekBar_play_position"/>

</android.support.constraint.ConstraintLayout>